<resources>
    <string name="app_name">MY News</string>
    <string name="title_activity_article_detail_scrolling">ArticleDetailScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="Open">Custom News</string>
    <string name="Close">Custom News</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MY News</string>
    <string name="nav_header_subtitle">Menu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="how_it_works_text">
        When you go to home you can see a card which shows you a news article.
        You can also click on the article to get to the entire article.
        If you\'re interested in the article you can swipe the article to the right,
        if not swipe it to the left.
        This app will remember what kind of topics you\'re interested in and show
        you more articles related to that topic.
        If you want to know what kind of data the app collects about you just go to
        My Statistics.
    </string>

    <string name="known_problems_text">
        I\'m just a small developer and I use a free source for the news articles I\'m showing to you.
        That\'s why I can request news articles only up to 1000 times a month.
        Furthermore I don\'t get the entire article content, that\'s why I link to
        the entire article.
        So for now the usage of this app is limited but if I\'m able to generate any kind of revenue
        with this app I\'ll be able to pay for an upgrade of my news source.
    </string>

    <string name="credit_text">
        I\'m getting my news from NewsAPI.org.\n\n

        The icons in this app:\n
        Icon made by Gregor Cresnar from www.flaticon.com\n
        https://www.flaticon.com/authors/gregor-cresnar\n\n

        Icon made by Gregor Good Ware from www.flaticon.com\n
        https://www.flaticon.com/authors/good-ware\n\n

        Icons made by Gregor freepik from www.flaticon.com\n
        https://www.flaticon.com/authors/freepik\n\n

        Free icon from www.fontawesome.com\n
        https://fontawesome.com/icons/chart-bar\n\n
    </string>

    <string name="swipe_right_text1">
        Swipe
    </string>
    <string name="swipe_right_text2">
        RIGHT
    </string>
    <string name="swipe_right_text3">
        if you
    </string>
    <string name="swipe_right_text4">
        LIKE
    </string>
    <string name="swipe_right_text5">
        the article you see.
    </string>

    <string name="question_right_text1">
        to answer
    </string>
    <string name="question_right_text2">
        YES.
    </string>


    <string name="swipe_left_text1">
        Swipe
    </string>
    <string name="swipe_left_text2">
        LEFT
    </string>
    <string name="swipe_left_text3">
        if you
    </string>
    <string name="swipe_left_text4">
        DISLIKE
    </string>
    <string name="swipe_left_text5">
        the article you see.
    </string>

    <string name="question_left_text1">
        to answer
    </string>
    <string name="question_left_text2">
        NO.
    </string>

    <string name="click_text1">
        Click on the article to
    </string>
    <string name="click_text2">
        READ
    </string>
    <string name="click_text3">
        it.
    </string>

    <string name="finance_expl_headline">
        Is this app for free?
    </string>

    <string name="statistics_expl_headline">
        What happens after you swiped?
    </string>
    <string name="explain_cat_statistic">
        By swiping NEWS ARTICLES we know which CATEGORIES you like.
    </string>
    <string name="explain_topic_statistic">
        By answering QUESTIONS we know which TOPICS you like.
    </string>
    <string name="explain_statistic_below_text1">
        Every day we adjust the news we show to you according to your preferred CATEGORIES and TOPICS.
    </string>
    <string name="explain_statistic_below_text2">
        In MY STATISTICS you can always check out the data we collected about you.
    </string>



</resources>
